--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,167 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.search {
+  margin-top: 10px;
+}
+
+.results {
+  margin-top: 10px;
+}
+
+.limit {
+  margin-top: 15px;
+}
+
+.header {
+  background-color: #343a40;
+  color: black;
+  height: 50px;
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+.search-subject {
+  background-color: #f0f0f0;
+  padding-top: 60px;
+  padding-bottom: 100px;
+  margin-top: 100px;
+}
+
+.sender-label {
+  margin-top: 25px;
+}
+
+.table {
+  margin-top: 20px;
+} */
+
+.parent {
+  background-color: #585858;
+  border-color: #b8b8b8;
+  border-style: solid;
+  border-radius: 6px;
+}
+h5 {
+  padding: 10px;
+  color: white;
+}
+.child {
+  background-color: #686868;
+  margin: 10px;
+  border-radius: 4px;
+}
+h6 {
+  margin: 10px;
+  color: white;
+}
+input[type="text"],
+textarea {
+  margin: 10px;
+  background-color: #383838;
+  color: white;
+}
+input {
+  border-radius: 4px;
+}
+button {
+  background-color: #007fff;
+  color: white;
+  border-radius: 8px;
+}
+th {
+  color: white;
+  border-style: none;
+}
+tr {
+  background-color: #505050;
+  border-style: none;
+}
+thead {
+  border-style: none;
+}
+table {
+  border-style: none;
+}
+.container-xxl {
+  padding-top: 50px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 70px;
+  background-color: #484848;
+}
+
+td {
+  color: blanchedalmond;
+}
+
+/* .table-fixed tbody td,
+.table-fixed thead > tr > th {
+  float: left;
+} */
+
+/* .table-fixed tbody {
+  display: block;
+  overflow-y: auto;
+} */
+
+/* .table-fixed tr {
+  display: block;
+} */
+
+/* .table-fixed {
+  overflow: auto;
+  overflow-x: hidden;
+  height: 10px;
+} */
+
+table {
+  overflow-y: scroll;
+  display: block;
+  height: 150px;
+}
+
+td {
+  background-color: #303030;
+}
+
+thead th {
+  position: sticky;
+}
+
+.renderBtn {
+  margin-left: 550px;
+  margin-bottom: 10px;
+}
+
+.btn1 {
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.btn2 {
+  border-radius: 0;
+}
+
+.btn3 {
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+}
+
+.plus {
+  border-radius: 18%;
+}
+
+.submit {
+  margin: 10px;
+}
+
+p {
+  color: red;
+}
+
+.addCategoryBtn {
+  margin: 10px;
 }
